--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-use-websocket": "^4.8.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
