--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.13.0",
     "formidable": "^3.5.1",
     "next": "14.2.5",
     "react": "^18",
@@ -18,7 +19,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
-    "@types/node": "^20",
+    "@types/node": "^20.15.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
