--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,21 @@ services:
       - NODE_ENV=production
     # volumes:
     #   - .:/app  # Optional: If you want to mount the current directory, for development purposes
-    command: npm start  # Run the Next.js app in production mode
+    # command: npm start  # Run the Next.js app in production mode
+  stt:
+    build:
+      context: ./stt 
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    environment:
+      - PORT=8000
+  
+  tts:
+    build:
+      context: ./tts
+      dockerfile: Dockerfile
+    ports:
+      - "8001:8000"
+    environment:
+      - PORT=8001
