--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-use-websocket": "^4.8.1",
+    "react-window": "^1.8.10",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@types/node": "^20.15.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
