--- a/stt/requirements.txt
+++ b/stt/requirements.txt
@@ -2,19 +2,37 @@ accelerate==0.33.0
 annotated-types==0.7.0
 anyio==4.4.0
 async-timeout==4.0.3
+CacheControl==0.14.0
+cachetools==5.4.0
 certifi==2024.7.4
 cffi==1.17.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==43.0.0
 dnspython==2.6.1
 email_validator==2.2.0
 fastapi==0.112.1
 fastapi-cli==0.0.5
 ffmpeg==1.4
 filelock==3.15.4
+firebase-admin==6.5.0
 fsspec==2024.6.1
+google-api-core==2.19.1
+google-api-python-client==2.141.0
+google-auth==2.33.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-cloud-core==2.4.1
+google-cloud-firestore==2.17.2
+google-cloud-storage==2.18.2
+google-crc32c==1.5.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.63.2
+grpcio==1.65.5
+grpcio-status==1.65.5
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.24.5
@@ -26,23 +44,33 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 more-itertools==10.4.0
 mpmath==1.3.0
+msgpack==1.0.8
 networkx==3.3
 numba==0.60.0
 numpy==1.26.4
+oauthlib==3.2.2
 openai-whisper @ git+https://github.com/openai/whisper.git@ba3f3cd54b0e5b8ce1ab3de13e32122d0d5f98ab
 packaging==24.1
+proto-plus==1.24.0
+protobuf==5.27.3
 psutil==6.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+PyJWT==2.9.0
+pyparsing==3.1.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.2
 redis==5.0.8
 regex==2024.7.24
 requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.7.1
+rsa==4.9
 safetensors==0.4.4
 shellingham==1.5.4
 sniffio==1.3.1
@@ -56,7 +84,9 @@ tqdm==4.66.5
 transformers==4.44.0
 typer==0.12.4
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.2.2
+uuid==1.30
 uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.23.0
